--- a/account_view/static/description/index.html
+++ b/account_view/static/description/index.html
@@ -72,14 +72,14 @@
         <div class="message">
             <h4>- When you click check box (account view) inside any account in the chart of accounts.</h4>
         </div>
-        <img src="assets/image1.png" alt="Image 1" class="responsive-img">
+        <img src="assets/image1.png" alt="Image 1" class="responsive-img" style="width: 100%;">
         
         <div class="message">
             <h4>- After clicking this check box within any account, it will be prevented me from use it.</h4>
         </div>
         <div class="image-container">
             <div class="gray-square">
-                <img src="assets/image2.png" alt="Image 2" class="responsive-img">
+                <img src="assets/image2.png" alt="Image 2" class="responsive-img" style="width: 100%;">
             </div>
         </div>
         
